[tool.poetry]
name = "AIIA News Telegram Bot"
version = "0.2.0"
description = ""
authors = ["AIIA"]

[tool.poetry.dependencies]
python = "3.10.12"
urllib3 = "^1.26.12"
telebot = "^0.0.5"
bs4 = "^0.0.1"
schedule = "^1.2.0"
pyairtable = "^1.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"